{
    "name": "MainInput",
    "maps": [
        {
            "name": "General",
            "id": "140e23ee-d9a9-4871-a036-e25fcec391ac",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "deb4b06c-c9cf-4d1f-b7fe-297cf7031b5a",
                    "expectedControlType": "Axis",
                    "processors": "AxisDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "22f2dba7-eb98-42ed-9a76-fff424b70e62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackLight",
                    "type": "Button",
                    "id": "83beac7a-5c61-4759-9a78-aa2b4552ced6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackHeavy",
                    "type": "Button",
                    "id": "813be068-c78a-43bf-8ca7-550cdfb1b608",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "e8744609-db8d-4de7-81fd-6ae1150fb4a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "92ab9012-fb75-40ec-8f07-d089813b6a28",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "809c8925-b236-4a6e-9f79-cdc2460db659",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "510832f9-c12a-4696-b4a1-f01e1a5dbafd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5453d41b-632f-4b50-9768-ad9c0c14f7bb",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f4dd925-7c36-4d5a-a292-7ae933e23c23",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12fc4d7c-cd49-4f4c-b15e-948bb6c579e9",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edc11edd-f8c3-4067-a668-23b6b5227b45",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AttackLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c07f24e0-da19-4e63-a47b-b0acba4159fa",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73f578f8-a180-4f61-b486-706fa91dfeba",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AttackHeavy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3ca4819-7253-4217-8883-cbec0388449b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackHeavy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09883099-bdd0-475b-b44e-815f1aa0fba8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70fbb270-922e-4dc7-bc96-b2e9a30474c3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Android",
            "bindingGroup": "Android",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}